index.css
/* ... */
.cid-rvslEOBmz8 .navbar-expand-lg .navbar-nav .nav-link{
    padding:0
}
.cid-rvslEOBmz8 ul.navbar-nav{
    -webkit-flex-wrap:wrap;
    -ms-flex-wrap:wrap;
    flex-wrap:wrap
}
.cid-rvslEOBmz8 .navbar-buttons{
    text-align:center;
    padding-top:1rem;
    padding-bottom:1rem
}
.cid-rvslEOBmz8 button.navbar-toggler{
    display:none;
    outline:none;
    width:31px;
    height:20px;
    cursor:pointer;
    transition:all .2s;
    position:relative;
    -webkit-align-self:center;
    align-self:center
}
.cid-rvslEOBmz8 button.navbar-toggler .hamburger span{
    position:absolute;
    right:0;
    width:30px;
    height:2px;
    border-right:5px;
    background-color:#0bc78b
}
.cid-rvslEOBmz8 button.navbar-toggler .hamburger span:nth-child(1){
    top:0;
    transition:all .2s
}
.cid-rvslEOBmz8 button.navbar-toggler .hamburger span:nth-child(2){
    top:8px;
    transition:all .15s
}
.cid-rvslEOBmz8 button.navbar-toggler .hamburger span:nth-child(3){
    top:8px;
    transition:all .15s
}
.cid-rvslEOBmz8 button.navbar-toggler .hamburger span:nth-child(4){
    top:16px;
    transition:all .2s
}
.cid-rvslEOBmz8 .navbar-dropdown{
    padding:.5rem 1rem;
    position:fixed
}
.cid-rvslEOBmz8 a.nav-link{
    display:flex;
    -webkit-align-items:center;
    align-items:center;
    -webkit-justify-content:space-between;
    justify-content:space-between
}
.cid-rvslEOBmz8 .ampstart-btn{
    display:flex;
    -webkit-align-self:center;
    align-self:center
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger{
    position:absolute;
    right:20px;
    margin-left:auto;
    width:30px;
    height:20px;
    background:none;
    border:none;
    cursor:pointer;
    z-index:1000
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger.sticky-but{
    position:fixed
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger:focus{
    outline:none
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger span{
    position:absolute;
    right:0;
    width:30px;
    height:2px;
    border-right:5px;
    background-color:#0bc78b
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger span:nth-child(1){
    top:0;
    transition:all .2s
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger span:nth-child(2){
    top:8px;
    transition:all .15s
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger span:nth-child(3){
    top:8px;
    transition:all .15s
}
.cid-rvslEOBmz8 .ampstart-btn.hamburger span:nth-child(4){
    top:16px;
    transition:all .2s
}
@media (min-width: 992px){
    .cid-rvslEOBmz8 .ampstart-btn, .cid-rvslEOBmz8 amp-sidebar{
        display:none
    }
}
.cid-rvslEOBmz8 amp-sidebar{
    min-width:260px;
    z-index:1050;
    background-color:#212725
}
.cid-rvslEOBmz8 amp-sidebar.open:after{
    content:'';
    position:absolute;
    top:0;
    left:0;
    bottom:0;
    right:0;
    background-color:red
}
.cid-rvslEOBmz8 .builder-sidebar{
    min-width:300px;
    background-color:#212725;
    position:relative;
    min-height:100vh;
    z-index:1030;
    padding:1rem 2rem;
    max-width:20rem
}
.cid-rvslEOBmz8 .close-sidebar{
    width:30px;
    height:30px;
    position:relative;
    cursor:pointer;
    background-color:transparent;
    border:none
}
.cid-rvslEOBmz8 .close-sidebar:focus{
    outline:2px auto #0bc78b
}
.cid-rvslEOBmz8 .close-sidebar span{
    position:absolute;
    left:0;
    width:30px;
    height:2px;
    border-right:5px;
    background-color:#0bc78b
}
.cid-rvslEOBmz8 .close-sidebar span:nth-child(1){
    transform:rotate(45deg)
}
.cid-rvslEOBmz8 .close-sidebar span:nth-child(2){
    transform:rotate(-45deg)
}
.cid-rvslEOBmz8 amp-img{
    width:45px;
    height:auto;
    display:flex;
    -webkit-align-items:center;
    align-items:center
}
.cid-rvslEOBmz8 amp-img img{
    object-fit:contain
}
@media (max-width: 768px){
    .cid-rvslEOBmz8 amp-img{
        max-width:55px
    }
}
.cid-rvslEOBmz8 .social .iconfont-wrapper .amp-iconfont{
    color:#7567f8;
    font-size:1.5rem
}
.cid-rvslOstCaH{
    background-image:url("assets/images/texture.jpg")
}
.cid-rvslOstCaH .mbr-overlay{
    background:#212725;
    opacity:0.97
}
@media (max-width: 767px){
    .cid-rvslOstCaH .title-block{
        padding-left:0;
        padding-right:0
    }
}
.cid-rvslOstCaH .btn-play .iconfont-wrapper span.amp-iconfont{
    font-size:1.5rem;
    color:#ffffff
}
.cid-rvslOstCaH .custom-header-img{
    height:85vh;
    width:auto
}
.cid-rvslOstCaH H1{
    color:#0bc78b
}
.cid-rvslOstCaH H2{
    color:#f1f1f7
}
.cid-rvslOstCaH .row{
    display:table-row
}
.cid-rvslOstCaH .col-left, .cid-rvslOstCaH .col-right{
    display:table-cell;
    vertical-align:middle
}
@media screen and (max-width: 991px){
    .col-left{
        display:none
    }
    .download{
        justify-content: center;
    }
    .cid-rvslOstCaH .title-block{
        text-align:center
    }
    .cid-rvslOstCaH .mbr-section-btn{
        display:flex;
        justify-content:center
    }
}
.cid-rvslRdlL72{
    padding-top:7rem;
    padding-bottom:7rem;
    background-color:#ffffff
}
.cid-rvslRdlL72 .item-wrapper{
    background-color:transparent
}
.cid-rvslRdlL72 .item-wrapper .iconfont-wrapper{
    display:inline-block;
    width:3rem;
    height:3rem
}
.cid-rvslRdlL72 .item-wrapper .iconfont-wrapper span.amp-iconfont{
    font-size:3rem;
    color:#0bc78b
}
.cid-rvslRdlL72 .item-wrapper .borderForName{
    display:block;
    width:95%;
    height:1px;
    background-color:rgba(0,0,0,0.1);
    margin:25px auto 0;
    border-top:1px solid transparent
}
.cid-rvslRdlL72 .item-wrapper .borderForName .borderForNameColor{
    display:block;
    width:20%;
    height:1px;
    margin:-2px auto 15px;
    border-bottom:3px solid #0bc78b
}
.cid-rvslRdlL72 .item{
    padding-left:0;
    padding-right:0;
    border:1px solid #f1f1f7
}
.cid-rvslRdlL72 .item p{
    line-height:26px
}
@media (max-width: 767px){
    .cid-rvslRdlL72 .item{
        margin-bottom:15px
    }
}
.cid-rvslRdlL72 .line .line-line-color{
    border-bottom-color:#0bc78b
}
.cid-rvslRdlL72 H4{
    color:#178f69
}
/* ... */

